LU-3504 ldlm: Don't kmalloc while holding spinlock

This change fixes a regression introduced by the following commit:

    commit 2c7a41a5c5958d36fa839ea91f3e63375cbd90fc
    Author: Vitaly Fertman <vitaly_fertman@xyratex.com>
    Date:   Tue Jun 26 01:47:50 2012 +0400

        LU-1157 ldlm: replace waiting flock lists by hashes

Prior to this fix, there existed a possibility to call kmalloc while
holding a ldlm lock's spin lock. This is never acceptable behaviour
because kmalloc may schedule, and we must never sleep while holding a
spin lock.

This bug manifested itself on a production MDS via this call path:

    PID: 24974 TASK: ... CPU: 19 COMMAND: "mdt02_010"
     #0 [...] schedule
     #1 [...] __cond_resched+0x2a at ...
     #2 [...] _cond_resched+0x30 at ...
     #3 [...] __kmalloc+0x130 at ...
     #4 [...] cfs_alloc+0x30 at ... [libcfs]
     #5 [...] cfs_hash_create+0x151 at ... [libcfs]
     #6 [...] ldlm_init_flock_export+0x54 at ... [ptlrpc]
     #7 [...] ldlm_process_flock_lock+0x1432 at ... [ptlrpc]
     #8 [...] ldlm_lock_enqueue+0x405 at ... [ptlrpc]
     #9 [...] ldlm_handle_enqueue0+0x4ef at ... [ptlrpc]
    #10 [...] mdt_enqueue+0x46 at ... [mdt]
    #11 [...] mdt_handle_common+0x648 at ... [mdt]
    #12 [...] mdt_regular_handle+0x15 at ... [mdt]
    #13 [...] ptlrpc_server_handle_request+0x398 at ... [ptlrpc]
    #14 [...] ptlrpc_main+0xace at ... [ptlrpc]
    #15 [...] child_rip+0xa at ...

To fix this scenario, the call to ldlm_init_flock_export() initializing
the exp_flock_hash field was removed from ldlm_flock_blocking_link(),
and into ldlm_init_export().

Signed-off-by: Prakash Surya <surya1@llnl.gov>
Change-Id: Ieb703d7a4bf913ea3541bd421a7d553137aba34d